added vacationDaysOff tests

--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
     "cypress": "^12.6.0"
+  },
+  "dependencies": {
+    "flatpickr": "^4.6.13"
   }
 }
